--- a/index.html
+++ b/index.html
@@ -1,277 +1,3 @@
-<H1><b>Jace's UBG </b></H1>
-<p>270+ Games, Named after my friend, made by <a href="https://github.com/acool1036">ME</a></p>
-<h1>#</h1>
-<a href="Games/Embeds/1v1lol.html">1v1lol</a><br>
-<a href=Games/Embeds/cl12minibattles.html">1 2 Mini Battles</a><br>
-<a href="Games/Embeds/cl2048.html">2048</a><br>
-<a href="Games/Embeds/cl2048cupcakes.html">2048 Cupcakes</a><br>
-<a href="Games/Embeds/cl60secondsburgerrun.html">60 Second Burger Run</a><br>
-<a href="Games/Embeds/cl60secondssantarun.html">60 Second Santa Run</a><br>
-<a href="Games/Embeds/cl8ballpool.html">8 Ball Pool</a><br>
-<h1>A</h1>
-<a href="Games/Embeds/clachievmentunlocked.html">Achivement Unlocked</a><br>
-<a href="Games/Embeds/clachievmentunlocked2.html">Achivement Unlocked 2</a><br>
-<a href="Games/Embeds/clachievmentunlocked3.html">Achivement Unlocked 3</a><br>
-<a href="Games/Embeds/clagariolite.html">Agar.io Lite</a><br>
-<a href="Games/Embeds/clageofwar.html">Age of War</a><br>
-<a href="Games/Embeds/clahoysurvival.html">Ahoy Survival</a><br>
-<a href="Games/Embeds/clamongus.html">Among Us</a><br>
-<a href="Games/Embeds/clangrybirds.html">Angry Birds</a><br>
-<a href="Games/Embeds/clappleworm.html">Apple Worm</a><br>
-<a href="Games/Embeds/clasmallworldcup.html">A Small World Cup</a><br>
-<a href="Games/Embeds/clawesometanks.html">Awesome Tanks</a><br>
-<h1>B</h1>
-<a href="Games/Embeds/clballsandbricksgood.html">Balls And Bricks</a><br>
-<a href="Games/Embeds/clbasketballlegends.html">Basketball Legends</a><br>
-<a href="Games/Embeds/clbasketballlegendsgoodywoody.html">Balls And Bricks ALT</a><br>
-<a href="Games/Embeds/clbasketbros.html">Basket Bros</a><br>
-<a href="Games/Embeds/clbasketrandomgood.html">Basket Random</a><br>
-<a href="Games/Embeds/clbattles.html">Battles</a><br>
-<a href="Games/Embeds/clbigicetowertinysquare.html">Big Ice Tower Tiny Square</a><br>
-<a href="Games/Embeds/clbigneontowertinysquare.html">Big Neon Tower Tiny Square</a><br>
-<a href="Games/Embeds/clgoodbigtowertinysquare.html">Big Tower Tiny Square</a><br>
-<a href="Games/Embeds/clbitlife.html">Bitlife</a><br>
-<a href="Games/Embeds/clblockysnakes.html">Blocky Snakes</a><br>
-<a href="Games/Embeds/clbloonsTD1.html">Bloons Tower Defence</a><br>
-<a href="Games/Embeds/clbloonsTD2.html">Bloons Tower Defence 2</a><br>
-<a href="Games/Embeds/clbloonsTD3.html">Bloons Tower Defence 3</a><br>
-<a href="Games/Embeds/clbloonsTD4.html">Bloons Tower Defence 4</a><br>
-<a href="Games/Embeds/clbloxorz.html">Bloxorz</a><br>
-<a href="Games/Embeds/clbobtherobber.html">Bob The Robber</a><br>
-<a href="Games/Embeds/clbobtherobber2.html">Bob The Robber 2</a><br>
-<a href="Games/Embeds/clbobtherobber5.html">Bob The Robber 5</a><br>
-<a href="Games/Embeds/clboxingrandom.html">Boxing Random</a><br>
-<a href="Games/Embeds/clbuckshotroulette.html">Buck Shot Roulette</a><br>
-<a href="Games/Embeds/clbunnyland.html">Bunnyland</a><br>
-<a href="Games/Embeds/clburritobison.html">Burrito Bison</a><br>
-<a href="Games/Embeds/clburritobisonrevenge.html">Burrito Bison Revenge</a><br>
-<h1>C</h1>
-<a href="Games/Embeds/clcarkingarena.html">Car King Arena</a><br>
-<a href="Games/Embeds/clchess.html">Chess</a><br>
-<a href="Games/Embeds/clchoppyorc.html">Choppy Orc</a><br>
-<a href="Games/Embeds/clclusterrush.html">Cluster Rush</a><br>
-<a href="Games/Embeds/clcookieclickergood.html">Cookie Clicker</a><br>
-<a href="Games/Embeds/clcuttherope.html">Cut the Rope</a><br>
-<a href="Games/Embeds/clcuttheropetimetravel.html">Cut the Rope Time-Travel</a><br>
-<a href="Games/Embeds/clcyberbungracing.html">Cyber Bung Racing</a><br>
-<h1>D</h1>
-<a href="Games/Embeds/cldeepestsword.html">Deepest Sword</a><br>
-<a href="Games/Embeds/cldiddykongracing.html">Diddy Kong Racing</a><br>
-<a href="Games/Embeds/cldonkeykong.html">Donkey Kong</a><br>
-<a href="Games/Embeds/cldonkeykong64.html">Donkey Kong 64</a><br>
-<a href="Games/Embeds/cldonkeykongcountry.html">Donkey Kong Country</a><br>
-<a href="Games/Embeds/cldonkeykongcountry2.html">Donkey Kong Country 2</a><br>
-<a href="Games/Embeds/cldoodlejumpgoober.html">Doodle Jump</a><br>
-<a href="Games/Embeds/cldoom.html">Doom</a><br>
-<a href="Games/Embeds/cldoom64.html">Doom 64</a><br>
-<a href="Games/Embeds/cldragonballadvance.html">Dragon Ball Advance</a><br>
-<a href="Games/Embeds/cldrawclimber.html">Draw Climber</a><br>
-<a href="Games/Embeds/cldreader.html">Dreader</a><br>
-<a href="Games/Embeds/cldreader.html">Dreader</a><br>
-<a href="Games/Embeds/cldriftboss.html">Drift Boss</a><br>
-<a href="Games/Embeds/clducklife.html">Duck Life</a><br>
-<a href="Games/Embeds/clducklife2.html">Duck Life 2</a><br>
-<a href="Games/Embeds/clducklife3.html">Duck Life 3</a><br>
-<a href="Games/Embeds/clducklife4.html">Duck Life 4</a><br>
-<a href="Games/Embeds/clducklfe5.html">Duck Life 5</a><br>
-<a href="Games/Embeds/cldyingdreams.html">Dying Dreams</a><br>
-<a href="Games/Embeds/clDragonBallZTheLegacyofGoku.html">Dragon Ball Z The Legacy of Goku</a><br>
-<h1>E</h1>
-<a href="Games/Embeds/cleggycar.html">Eggy Car</a><br>
-<a href="Games/Embeds/clelectricman2.html">Electric Man 2</a><br>
-<a href="Games/Embeds/clendlesswar4.html">Endless War 4</a><br>
-<a href="Games/Embeds/clendlesswar5.html">Endless War 5</a><br>
-<a href="Games/Embeds/clendlesswar7.html">Endless War 7</a><br>
-<a href="Games/Embeds/Eagler_Offline-1.5.2.html">EaglerCraft Offline 1.5.2</a><br>
-<a href="Games/Embeds/EaglercraftX_U19_1.8_Offline_International.html">EaglerCraft Offline Offline International 1.8</a><br>
-<h1>F</h1>
-<a href="Games/Embeds/clfinalearth2.html">Final Earth 2</a><br>
-<a href="Games/Embeds/clfireblob.html">Fire Blob</a><br>
-<a href="Games/Embeds/clfireboyandwatergirl.html">Fire Boy and Water Girl</a><br>
-<a href="Games/Embeds/clfireboyandwatergirl2.html">Fire Boy and Water Girl 2</a><br>
-<a href="Games/Embeds/clfireboyandwatergirl3.html">Fire Boy and Water Girl 3</a><br>
-<a href="Games/Embeds/clfireboyandwatergirl5.html">Fire Boy and Water Girl 5</a><br>
-<a href="Games/Embeds/clfireboyandwatergirl6.html">Fire Boy and Water Girl 6</a><br>
-<a href="Games/Embeds/clfreerider2.html">Free Rider 2</a><br>
-<a href="Games/Embeds/clfreerider3.html">Free Rider 3</a><br>
-<a href="Games/Embeds/clfunnyshooter2.html">Funny Shooter 2</a><br>
-<a href="Games/Embeds/clFIFAsoccer06.html">FIFA 06</a><br>
-<a href="Games/Embeds/clFIFA07.html">FIFA 07</a><br>
-<a href="Games/Embeds/clFIFA10.html">FIFA 10</a><br>
-<a href="Games/Embeds/clFIFA2000.html">FIFA 2000</a><br>
-<a href="Games/Embeds/clFIFAinternationalsoccer.html">FIFA International Soccer</a><br>
-<a href="Games/Embeds/clworldcup98.html">FIFA World Cup 98</a><br>
-<a href="Games/Embeds/clFNAF.html">FNAF</a><br>
-<h1>G</h1>
-<a href="Games/Embeds/clgetawayshootout.html">Getaway Shoot Out</a><br>
-<a href="Games/Embeds/clgetontop.html">Get On Top</a><br>
-<a href="Games/Embeds/clgoogledino.html">Google Dino</a><br>
-<a href="Games/Embeds/clgrandtheftautoadvance.html">Grand Theft Auto Advance</a><br>
-<a href="Games/Embeds/clgunmayhem.html">Gun Mayhem</a><br>
-<a href="Games/Embeds/clgunmayhem2goof.html">Gun Mayhem 2</a><br>
-<a href="Games/Embeds/clgunspin.html">Gun Spin</a><br>
-<h1>H</h1>
-<a href="Games/Embeds/clhandulum.html">Handulum</a><br>
-<a href="Games/Embeds/clhappywheels.html">Happy Wheels</a><br>
-<a href="Games/Embeds/clholeio.html">Hole.io</a><br>
-<a href="Games/Embeds/clhouseofhazards.html">House of Hazards</a><br>
-<h1>I</h1>
-<a href="Games/Embeds/clidlebreakout.html">Idle Breakout</a><br>
-<a href="Games/Embeds/clidledice.html">Idle Dice</a><br>
-<a href="Games/Embeds/clidleminorzamnshes12.html">Idle Miners</a><br>
-<a href="Games/Embeds/clindiantrucksimiulator.html">Indian Truck Simulator</a><br>
-<h1>J</h1>
-<a href="Games/Embeds/cljacksmith.html">Jacksmith</a><br>
-<a href="Games/Embeds/cljellytruckgood.html">Jelly Truck</a><br>
-<a href="Games/Embeds/cljustfalllol.html">JustFall.lol</a><br>
-<h1>K</h1>
-<a href="Games/Embeds/clknifehit.html">Knife Hit</a><br>
-<h1>L</h1>
-<a href="Games/Embeds/cllightitup.html">Light It Up</a><br>
-<h1>M</h1>
-<a href="Games/Embeds/clmariogolf.html">Mario Golf</a><br>
-<a href="Games/Embeds/clmariokart64.html">Mario Kart 64</a><br>
-<a href="Games/Embeds/clmariokartds.html">Mario Kart DS</a><br>
-<a href="Games/Embeds/clmariokartsupercircuit.html">Mario Kart Super Circuit</a><br>
-<a href="Games/Embeds/clmariopaint.html">Mario Paint</a><br>
-<a href="Games/Embeds/clmarioparty2.html">Mario Party 2</a><br>
-<a href="Games/Embeds/clmarioparty3.html">Mario Party 3</a><br>
-<a href="Games/Embeds/clmariopartyds.html">Mario Party DS</a><br>
-<a href="Games/Embeds/clmelonplayground.html">Melon Playground</a><br>
-<a href="Games/Embeds/clminimart.html">Mini Mart</a><br>
-<a href="Games/Embeds/clminitooth.html">Mini Tooth</a><br>
-<a href="Games/Embeds/clgoodmonkeymart.html">Monkey Mart</a><br>
-<a href="Games/Embeds/clmotox3m.html">Moto x3m</a><br>
-<a href="Games/Embeds/clmotox3m2.html">Moto x3m 2</a><br>
-<a href="Games/Embeds/clmotox3m3.html">Moto x3m 3</a><br>
-<a href="Games/Embeds/clmotox3mpoolparty.html">Moto x3m Pool Party</a><br>
-<a href="Games/Embeds/clmotox3mspookyland.html">Moto x3m Spooky Land</a><br>
-<a href="Games/Embeds/clmotox3mwinter.html">Moto x3m Winter</a><br>
-<a href="Games/Embeds/clmyfriendpedro.html">My Friend Pedro</a><br>
-<a href="Games/Embeds/clmyfriendpedroarena.html">My Friend Pedro Arena</a><br>
-<h1>N</h1>
-<a href="Games/Embeds/clneonblaster.html">Neon Blaster</a><br>
-<a href="Games/Embeds/clnoobminer.html">Noob Miner</a><br>
-<h1>O</h1>
-<a href="Games/Embeds/clovo.html">OvO</a><br>
-<a href="Games/Embeds/clovo2.html">OVO 2</a><br>
-<a href="Games/Embeds/clonepicefighting.html">One Piece Fighting</a><br>
-<a href="Games/Embeds/clofflineparadise.html">Offline Paradise</a><br>
-<a href="Games/Embeds/clomeganuggetclicker.html">Omega Nugget Clicker</a><br>
-<h1>P</h1>
-<a href="Games/Embeds/clpapalouienighthunt2.html">Papa Louie's Night Hunt</a><br>
-<a href="Games/Embeds/clpapalouiewhenburgersattack.html">Papa Louie's When Burgers Attack</a><br>
-<a href="Games/Embeds/clpapalouiewhenpizzasattack.html">Papa Louie's When Pizzas Attack</a><br>
-<a href="Games/Embeds/clpapasburgerIIIAAAAA.html">Papa's Burgeria</a><br>
-<a href="Games/Embeds/clpapascheeseria.html">Papa's Cheseria</a><br>
-<a href="Games/Embeds/clpapascupcakeria.html">Papa's Cupcakeria</a><br>
-<a href="Games/Embeds/clpapasfreezeria.html">Papa's Freezeria</a><br>
-<a href="Games/Embeds/clpapaspastaria.html">Papa's Pastaria</a><br>
-<a href="Games/Embeds/clpizzapapa.html">Papa's Pizzaria</a><br>
-<a href="Games/Embeds/clpapasscooperia.html">Papa's Scooperia</a><br>
-<a href="Games/Embeds/clpapassushiria.html">Papa's Sushiria</a><br>
-<a href="Games/Embeds/clpapastacomia.html">Papa's Taco Mia</a><br>
-<a href="Games/Embeds/clpapaswingeria.html">Papa's Wingeria</a><br>
-<a href="Games/Embeds/clpaperio.html">Paper.io</a><br>
-<a href="Games/Embeds/clpapermario.html">Paper Mario</a><br>
-<a href="Games/Embeds/clpico8.html">Pico 8</a><br>
-<a href="Games/Embeds/clpixelshooter.html">Pixel Shooter</a><br>
-<a href="Games/Embeds/clpixelspeedrun.html">Pixel Speedrun</a><br>
-<a href="Games/Embeds/clpokemonemerald.html">Pokemon Emerald</a><br>
-<a href="Games/Embeds/clpokemonfirered.html">Pokemon Fire Red</a><br>
-<a href="Games/Embeds/clpokemonruby.html">Pokemon Ruby</a><br>
-<a href="Games/Embeds/clpokemonsnap.html">Pokemon Snap</a><br>
-<a href="Games/Embeds/clpokemonultimatefusion.html">Pokemon Ultimate Fusion </a><br>
-<a href="Games/Embeds/clpolytrackgood.html">Poly Track</a><br>
-<h1>Q</h1>
-<a href="Games/Embeds/clqwop.html">QWOP</a><br>
-<h1>R</h1>
-<a href="Games/Embeds/clraftwars.html">Raft Wars</a><br>
-<a href="Games/Embeds/clragdollio.html">Ragdoll.io</a><br>
-<a href="Games/Embeds/clrecoil.html">Recoil</a><br>
-<a href="Games/Embeds/clredball.html">Redball</a><br>
-<a href="Games/Embeds/clredball2.html">Redball 2</a><br>
-<a href="Games/Embeds/clredball3.html">Redball 3</a><br>
-<a href="Games/Embeds/clredball4.html">Redball 4</a><br>
-<a href="Games/Embeds/clredball4vol2.html">Redball 4 Volume 2</a><br>
-<a href="Games/Embeds/clredball4vol3.html">Redball 4 Volume 3</a><br>
-<a href="Games/Embeds/clretrobowl.html">Retro Bowl</a><br>
-<a href="Games/Embeds/clreturntoriddleschool.html">Return to Riddle School</a><br>
-<a href="Games/Embeds/clriddleschool.html">Riddle School</a><br>
-<a href="Games/Embeds/clriddleschool2.html">Riddle School 2</a><br>
-<a href="Games/Embeds/clriddleschool3.html">Riddle School 3</a><br>
-<a href="Games/Embeds/clriddleschool4.html">Riddle School 4</a><br>
-<a href="Games/Embeds/clriddleschool5.html">Riddle School 5</a><br>
-<a href="Games/Embeds/clriddletransfer.html">Riddle Transfer</a><br>
-<a href="Games/Embeds/clriddletransfer2.html">Riddle Transfer 2</a><br>
-<a href="Games/Embeds/clrooftopsnipers.html">Rooftop Snipers</a><br>
-<h1>S</h1>
-<a href="Games/Embeds/clsandtris.html">Sandtris</a><br>
-<a href="Games/Embeds/clskyrace3d.html">Sky Race 3D</a><br>
-<a href="Games/Embeds/clslope3.html">Slope 3</a><br>
-<a href="Games/Embeds/clsmashkarts.html">Smash Karts</a><br>
-<a href="Games/Embeds/clsnakeis.html">Snake.io</a><br>
-<a href="Games/Embeds/clsnowballio.html">Snowball.io</a><br>
-<a href="Games/Embeds/clsnowridergoodygumdrops.html">Snow Rider 3D</a><br>
-<a href="Games/Embeds/clsoccerrandomgood.html">Soccer Random</a><br>
-<a href="Games/Embeds/clsonicadvance3.html">Sonic Advace 3</a><br>
-<a href="Games/Embeds/clsonicandknuckles.html">Sonic and Knuckles</a><br>
-<a href="Games/Embeds/clsonicrevert.html">Sonic Revert</a><br>
-<a href="Games/Embeds/clsonicspinball.html">Sonic Spin Ball</a><br>
-<a href="Games/Embeds/clsonicthehedgehog.html">Sonic The Hedgehog</a><br>
-<a href="Games/Embeds/clsonicthehedgehog2.html">Sonic The Hedgehog 2</a><br>
-<a href="Games/Embeds/clsonicthehedgehog3.html">Sonic The Hedgehog 3</a><br>
-<a href="Games/Embeds/clsouljumper.html">Soul Jumper</a><br>
-<a href="Games/Embeds/clspacebarclicker.html">Space Bar Clicker</a><br>
-<a href="Games/Embeds/clstickarchersbattle.html">Stick Archers Battle</a><br>
-<a href="Games/Embeds/clstickrpgcomplete.html">Stick RPG Complete</a><br>
-<a href="Games/Embeds/clstreangeropepolice.html">Strange Rope Police</a><br>
-<a href="Games/Embeds/clsuika.html">Suika Watermelon Game</a><br>
-<a href="Games/Embeds/clsuperhotlinemiami.html">Superhot Line Miami</a><br>
-<a href="Games/Embeds/clsupermario63.html">Super Mario 63</a><br>
-<a href="Games/Embeds/clsupermario64.html">Super Mario 64</a><br>
-<a href="Games/Embeds/clsupermario64ds.html">Super Mario 64 DS</a><br>
-<a href="Games/Embeds/clsupermarioallstars.html">Super Mario All Stars</a><br>
-<a href="Games/Embeds/clsupermariobros.html">Super Mario Bros</a><br>
-<a href="Games/Embeds/clsupermariobros2.html">Super Mario Bros 2</a><br>
-<a href="Games/Embeds/clsupermariokart.html">Super Mario Kart</a><br>
-<a href="Games/Embeds/clsupermariorpg.html">Super Mario RPG</a><br>
-<a href="Games/Embeds/clsupermarioworld.html">Super Mario World</a><br>
-<a href="Games/Embeds/clsupermarioworld2.html">Super Mario World 2</a><br>
-<a href="Games/Embeds/clsupermetroid.html">Super Metroid</a><br>
-<a href="Games/Embeds/clsuperoliverworld.html">Super Oliver World</a><br>
-<a href="Games/Embeds/clsupersmashbros.html">Super Smash Bros</a><br>
-<a href="Games/Embeds/clsupersmashflash.html">Smash Flash</a><br>
-<a href="Games/Embeds/clsupersmashflash2.html">Smash Flash 2</a><br>
-<a href="Games/Embeds/clsupersmashflash2butdifversion.html">Smash Flash 2 v0.4</a><br>
-<h1>T</h1>
-<a href="Games/Embeds/cltankmayhem.html">Tank Mayhem</a><br>
-<a href="Games/Embeds/cltankpixel.html">Tank Pixel</a><br>
-<a href="Games/Embeds/cltanukisunset.html">Tanuki Sunset</a><br>
-<a href="Games/Embeds/cltheimpossiblegame.html">The Impossible Game</a><br>
-<a href="Games/Embeds/clthisistheonlylevel.html">This is the Only Level</a><br>
-<a href="Games/Embeds/clthisistheonlylevel2.html">This is the Only Level 2</a><br>
-<a href="Games/Embeds/cltimeshooter2.html">Time Shooter 2</a><br>
-<a href="Games/Embeds/cltimeshooter3.html">Time Shooter 3</a><br>
-<a href="Games/Embeds/cltinyfishing.html">Tiny Fishing</a><br>
-<a href="Games/Embeds/cltombofthemask.html">Tomb of the Mask</a><br>
-<a href="Games/Embeds/cltowerblocks.html">Tower Blocks</a><br>
-<a href="Games/Embeds/cltubejumpers.html">Tube Jumpers</a><br>
-<a href="Games/Embeds/cltwoball3d.html">Two Ball 3D</a><br>
-<h1>U</h1>
-<a href="Games/Embeds/clunderneath.html">Underneath</a><br>
-<a href="Games/Embeds/clunfairmario.html">Unfair Mario</a><br>
-<a href="Games/Embeds/cluno.html">Uno</a><br>
-<h1>V</h1>
-<a href="Games/Embeds/clvex4.html">Vex 4</a><br>
-<a href="Games/Embeds/clvex5.html">Vex 5</a><br>
-<a href="Games/Embeds/clvex6.html">Vex 6</a><br>
-<a href="Games/Embeds/clvolleyrandom.html">Volley Random</a><br>
-<h1>W</h1>
-<a href="Games/Embeds/clwavedash.html">Wave Dash</a><br>
-<h1>X</h1>
-<p>NO GAME HERE</p>
-<h1>Y</h1>
-<a href="Games/Embeds/clyouarelucky.html">You are Lucky</a><br>
-<h1>Z</h1>
-<p>NO GAME HERE</p>
+<h1>Bliss Hub V0.01</h1>
+<H2><a href="Jace.html">UNBLOCKED GAMES</a></H2>
+<H2><a href="active/index.html">PROXY</a></H2>
