--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
 </style>
 <head>
-<title>My Page Title</title>
+<title>Bliss Cloud</title>
   <link rel="icon" type="image/x-icon" href="logo-dark-mode.svg">
 </head>
 <img src="logo-dark-mode.svg">
