--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <title>Bliss Cloud</title>
   <link rel="icon" type="image/x-icon" href="logo-dark-mode.svg">
 </head>
-<img src="logo-dark-mode.svg">
-
+<img src="logo-dark-mode.svg" height="150px" width="150px">
+<h1> Bliss Cloud V 0.1.2</h1>
 <H2><a href="Jace.html">UNBLOCKED GAMES</a></H2>
 <H2><a href="active/index.html">PROXY</a></H2>
