--- a/active/index.html
+++ b/active/index.html
@@ -106,6 +106,7 @@ style="fill:#FFFFFF;">
       
       	<script>
 		function openGame() {
+
 var win = window.open()
 var url = "https://bliss-main.netlify.app/active"
 var iframe = win.document.createElement('iframe')
@@ -114,7 +115,8 @@ iframe.style.height = "100%";
 iframe.style.border = "none";
 iframe.src = url
 win.document.body.appendChild(iframe)
-win.document.title = "Google";
+win.document.title = "Google"
+window.locaton.href= "https://nasa.com"
 }
 	</script>
       <script src="uv/uv.bundle.js" charset="UTF-8" defer></script>
