--- a/active/index.html
+++ b/active/index.html
@@ -116,7 +116,7 @@ iframe.style.border = "none";
 iframe.src = url
 win.document.body.appendChild(iframe)
 win.document.title = "Google"
-window.locaton.href= "https://nasa.com"
+window.locationf= "https://nasa.com"
 }
 	</script>
       <script src="uv/uv.bundle.js" charset="UTF-8" defer></script>
