--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 </head>
 <img src="logo-dark-mode.svg" height="150px" width="150px">
 <h1> Bliss Cloud V 0.1.2</h1>
-<H2><a href="Jace.html">UNBLOCKED GAMES</a></H2>
+<H2><a href="jace/index.html">UNBLOCKED GAMES</a></H2>
 <H2><a href="active/index.html">PROXY</a></H2>
 <h2><a href="links.htmml">Links</a></h2>
