it works i thiink

--- a/jace/emulated.html
+++ b/jace/emulated.html
@@ -30,4 +30,4 @@
 <p>For Requested Roms go <a href="emu-roms.html">Here</a></p>
 <p>Run Games On the Emulator</p>
 
-<a href="emu/index.html"><button class="continue"><b><u>Go to the Emulator</u></b></button></a>
+<a href="files/clemulator.html"><button class="continue"><b><u>Go to the Emulator</u></b></button></a>
