--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@
 <h1> Bliss Cloud V 0.1.2</h1>
 <H2><a href="jace/index.html">UNBLOCKED GAMES</a></H2>
 <H2><a href="active/index.html">PROXY</a></H2>
+<h2><a href="Stream-Star/index.html">MOVIES&TV</a></h2>
 <h2><a href="links.htmml">Links</a></h2>
