it will work nowwwwww

--- a/Stream-Star/movies.html
+++ b/Stream-Star/movies.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +19,7 @@
             if (imdbId.startsWith("tt")) {
                 imdbId = imdbId.substring(2);
             }
-            window.location.href = `stream/long.html?IMDb=${imdbId}/`;
+            window.location.href = `stream/long.html?IMDb=${imdbId}`;
         });
     </script>
 </body>
