--- a/Stream-Star/stream/embed.html
+++ b/Stream-Star/stream/embed.html
@@ -2252,7 +2252,8 @@
     <div id="loadingbox">
         <div id="main">
             <span class="loader"></span>
-            <img src="logo.png" alt="Logo" id="bigTitle">
+            <img src="../streamstar.svg" alt="Logo" id="bigTitle">
+            <p>Powered by <a href="https://embeddr.rhw.one"><img src="logo.png"></a></p>
             <p>Loading Embed...</p>
         </div>
     </div>
