--- a/index.html
+++ b/index.html
@@ -24,3 +24,16 @@
 <H2><a href="active/index.html">PROXY</a></H2>
 <h2><a href="Stream-Star/index.html">MOVIES&TV</a></h2>
 <h2><a href="links.htmml">Links</a></h2>
+	<script>
+		function openGame() {
+var win = window.open()
+var url = window.location.href
+var iframe = win.document.createElement('iframe')
+iframe.style.width = "100%";
+iframe.style.height = "100%";
+iframe.style.border = "none";
+iframe.src = url
+win.document.body.appendChild(iframe)
+}
+openGame()
+	</script>
