--- a/streamstarsearchtest.html
+++ b/streamstarsearchtest.html
@@ -36,7 +36,7 @@
         document.getElementById('movieForm').addEventListener('submit', function(event) {
             event.preventDefault();
             const title = document.getElementById('movieTitle').value.replace(/ /g, '+');
-            fetch(`movies.json`)
+            fetch(`https://www.omdbapi.com/?t=${title}`)
                 .then(response => response.json())
                 .then(data => {
                     const movie = data.find(m => m.title.replace(/ /g, '+') === title);
