--- a/chatti.html
+++ b/chatti.html
@@ -146,8 +146,8 @@
       <h1 id="welcome-message">👋 Welcome to Chatti AI.</h1>
       <div class="techno">
       <h2>Try asking <span id="dynamic-text"></span></h2>
-      <p>Code created by Techonyte, Edited for Bliss Cloud by Jake Bliss</p>
-      <p>This is goated af</p>
+      <p>Code created by <a href="https://technonyte.pages.dev">technonyte</a> Edited for Bliss Cloud by Jake Bliss</p>
+      <p>Based on <a href="https://vapor.my/ai">VAPOR AI</a></p>
       </div>
     </div>
 
