--- a/chatti.html
+++ b/chatti.html
@@ -137,6 +137,9 @@
         font-family: Jost;
         font-size: 3vh;
       }
+      a {
+        color:white;
+      }
       
     </style>
   </head>
