--- a/Stream-Star/movies.html
+++ b/Stream-Star/movies.html
@@ -20,14 +20,14 @@
             let imdbId = document.getElementById('imdbId').value;
             if (imdbId.startsWith("https://www.imdb.com/title/")) {
                 imdbId = imdbId.substring(27);
-                imdbId = imdbID.substring(0, imdbID.length - 1)
+                imdbId = imdbId.substring(0, imdbId.length - 1)
             }
             window.location.href = `stream/long.html?IMDb=${imdbId}`;
         });
         
     </script>
 
-</script>
+<iframe src="https://cse.google.com/cse?cx=341c9c8e59fc54ccf#gsc.tab=0"></iframe>
 
 
 </body>
