--- a/Stream-Star/movies.html
+++ b/Stream-Star/movies.html
@@ -12,6 +12,9 @@
         <button type="submit">Submit</button>
 <h2> How to get the imdb ID</h2>
 <p>1. Find the movie on imdb, using the search below<br>2. Copy link<br>3. paste link</p>
+<script async src="https://cse.google.com/cse.js?cx=341c9c8e59fc54ccf">
+</script>
+<div class="gcse-search"></div>
     </form>
 
     <script>
@@ -27,7 +30,6 @@
         
     </script>
 
-<iframe src="https://cse.google.com/cse?cx=341c9c8e59fc54ccf#gsc.tab=0"></iframe>
 
 
 </body>
