--- a/Stream-Star/movies.html
+++ b/Stream-Star/movies.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMDb ID Redirect</title>
+    <title>STREAMSTAR</title>
 </head>
 <body>
     <form id="imdbForm">
-        <label for="imdbId">Enter IMDb ID:</label>
+        <label for="imdbId">Enter IMDb Link:</label>
         <input type="text" id="imdbId" name="imdbId" required>
         <button type="submit">Submit</button>
-<h2> How to get the imdb ID</h2>
-<p>1. Find the movie on imdb, using the search below<br>2. Copy link<br>3. paste link</p>
+<h2> How to get the imdb Link</h2>
+<p>1. Find the movie on imdb, using the search below<br>2.Find Movie<br>3. Tripple Click the blue text under what youwant to watch (the link should be https://imdb.com/title/tt########/ nothing else will work<br>4.[CTRL]+C </p>
 <script async src="https://cse.google.com/cse.js?cx=341c9c8e59fc54ccf">
 </script>
 <div class="gcse-search"></div>
