--- a/chatti.html
+++ b/chatti.html
@@ -19,12 +19,20 @@
       rel="stylesheet"
     />
     <style>
-      body {
-        font-family: "Inter", sans-serif;
-        background: #000000;
-        margin: 0;
-        height: 99vh;
-      }
+     
+      @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
+  html{
+    background-color: black;
+    color: white;
+    cursor: cell;
+    font-family: "Palanquin Dark", serif;
+    font-weight: 400;
+    font-style: normal;
+    margin: 0;
+    height: 99vh;
+  }
+
+  
 
       #chat-container {
         flex: 1;
