--- a/chatti.html
+++ b/chatti.html
@@ -19,20 +19,21 @@
       rel="stylesheet"
     />
     <style>
-     
       @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
-  html{
-    background-color: black;
-    color: white;
-    cursor: cell;
-    font-family: "Palanquin Dark", serif;
-    font-weight: 400;
-    font-style: normal;
-    margin: 0;
-    height: 99vh;
-  }
-
   
+  a{
+    color: white;
+  }
+      body {
+        font-family: "Palanquin Dark", serif;
+        font-weight: 400;
+        font-style: normal;
+        background: #000000;
+        margin: 0;
+        height: 99vh;
+        cursor: cell;
+
+      }
 
       #chat-container {
         flex: 1;
