--- a/Stream-Star/index.html
+++ b/Stream-Star/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
+  html{
+    background-color: black;
+    color: white;
+    cursor: cell;
+    font-family: "Palanquin Dark", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  a{
+    color: white;
+  }
+  </style>
 </head>
 <body>
  <h1>THIS SITE IS IN BETA TESTING SO DO NOT TALK TO ME IF IT DONT WORK</h1>
-<a href="tv.html">TV</a>
+<a href="tv.html">TV</a><br>
 <a href="movies.html">Movies</a>
 </body>
 </html>
