--- a/Stream-Star/movies.html
+++ b/Stream-Star/movies.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STREAMSTAR</title>
 </head>
+<style> @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
+  html{
+    background-color: black;
+    color: white;
+    cursor: cell;
+    font-family: "Palanquin Dark", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  a{
+    color: white;
+  }</style>
 <body>
     <form id="imdbForm">
         <label for="imdbId">Enter IMDb Link:</label>
