--- a/Stream-Star/stream/embed.html
+++ b/Stream-Star/stream/embed.html
@@ -2252,8 +2252,8 @@
     <div id="loadingbox">
         <div id="main">
             <span class="loader"></span>
-            <img src="../streamstar.svg" alt="Logo" id="bigTitle">
-            <p>Powered by <a href="https://embeddr.rhw.one"><img src="logo.png"></a></p>
+            <img src="../streamstar.svg" alt="Logo" id="bigTitle" height="90px" width="160px"> 
+            <p>Powered by <a href="https://embeddr.rhw.one"><img src="logo.png" height="20px" width="50px"></a></p>
             <p>Loading Embed...</p>
         </div>
     </div>
