--- a/Stream-Star/stream/multi.html
+++ b/Stream-Star/stream/multi.html
@@ -30,7 +30,8 @@
         const iframeUrl = `embed.html#https://multiembed.mov/directstream.php?video_id=${imdbId}&s=${s}&e=${e}`;
 
         if (imdbId) {
-            document.write(`<iframe src="${iframeUrl}" title="IMDb Movie"></iframe>`);
+            document.write(`<iframe src="${iframeUrl}" title="IMDb Movie  sandbox allow-top-navigation allow-same-origin allow-scripts allow-pointer-lock allow-orientation-lock 
+allow-forms allow-presentation"></iframe>`);
         } else {
             document.write('<p>Please provide a valid IMDb ID in the URL parameter.</p>');
         }
