--- a/Stream-Star/stream/multi.html
+++ b/Stream-Star/stream/multi.html
@@ -31,7 +31,7 @@
 
         if (imdbId) {
             document.write(`<iframe src="${iframeUrl}" title="IMDb Movie  sandbox allow-top-navigation allow-same-origin allow-scripts allow-pointer-lock allow-orientation-lock 
-allow-forms allow-presentation"></iframe>`);
+allow-forms allow-presentation allow-top-navigation"></iframe>`);
         } else {
             document.write('<p>Please provide a valid IMDb ID in the URL parameter.</p>');
         }
