--- a/Stream-Star/stream/multi.html
+++ b/Stream-Star/stream/multi.html
@@ -30,8 +30,7 @@
         const iframeUrl = `embed.html#https://multiembed.mov/directstream.php?video_id=${imdbId}&s=${s}&e=${e}`;
 
         if (imdbId) {
-            document.write(`<iframe src="${iframeUrl}" title="IMDb Movie  sandbox allow-top-navigation allow-same-origin allow-scripts allow-pointer-lock allow-orientation-lock 
-allow-forms allow-presentation allow-top-navigation"></iframe>`);
+            document.write(`<iframe src="${iframeUrl}" title="IMDb Movie  sandbox allow-scripts allow-same-origin allow-presentation allow-top-navigation"></iframe>`);
         } else {
             document.write('<p>Please provide a valid IMDb ID in the URL parameter.</p>');
         }
