--- a/Stream-Star/stream/multi.html
+++ b/Stream-Star/stream/multi.html
@@ -7,17 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMDb Iframe Embed</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        iframe {
-            width: 100%;
-            height: 600px;
-            border: none;
-        }
+       @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
+  html{
+    background-color: black;
+    color: white;
+    cursor: cell;
+    font-family: "Palanquin Dark", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  a{
+    color: white;
+  }
+        
     </style>
 </head>
 <body>
