--- a/Stream-Star/stream/multi.html
+++ b/Stream-Star/stream/multi.html
@@ -1,4 +1,4 @@
-# IMDb Iframe Embed
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -33,7 +33,7 @@
         const iframeUrl = `embed.html#https://multiembed.mov/directstream.php?video_id=${imdbId}&s=${s}&e=${e}`;
 
         if (imdbId) {
-            document.write(`<iframe src="${iframeUrl}" title="IMDb Movie height="800px" width="1000px"></iframe>`);
+            document.write(`<iframe src="${iframeUrl}" title="IMDb Movie" height="800px" width="1000px"></iframe>`);
         } else {
             document.write('<p>Please provide a valid IMDb ID in the URL parameter.</p>');
         }
