--- a/Stream-Star/index.html
+++ b/Stream-Star/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="https://www.w3counter.com/tracker.js?id=155131"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
   html{
