--- a/chatti.html
+++ b/chatti.html
@@ -308,8 +308,7 @@
           conversationHistory.shift();
         }
 
-        let key1 =
-          "Z3NrX0w4SFF4WTBQZlByVGcyMDFGcHFHV0dkeWIzRlltaThPenhaV1JtSGhyUTdESk1NMTJISFc=";
+        let key1 = "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";
         let key2 = atob(key1);
         chatContainer.scrollTop = chatContainer.scrollHeight;
 
