--- a/meta-llama-3test.html
+++ b/meta-llama-3test.html
@@ -110,7 +110,7 @@ button:hover {
         </div>
     </div>
 
-    <script>const apiKey = "YOUR_GROQ_API_KEY"; // Replace with your Groq API key
+    <script>const apiKey = "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"; // Replace with your Groq API key
 const chatBox = document.getElementById("chat-box");
 const userInput = document.getElementById("user-input");
 const sendButton = document.getElementById("send-btn");
