--- a/meta-llama-3test.html
+++ b/meta-llama-3test.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatGPT Clone</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
 
 <style>
-    body {
+   body {
     font-family: Arial, sans-serif;
     background-color: #343541;
     margin: 0;
@@ -50,6 +51,7 @@
     padding: 10px;
     border-radius: 8px;
     max-width: 75%;
+    word-wrap: break-word;
 }
 
 .user .bubble {
@@ -60,6 +62,33 @@
 .ai .bubble {
     background-color: #575A6A;
     color: white;
+}
+
+/* Style code blocks */
+.bubble pre {
+    background-color: #2E2F38;
+    padding: 10px;
+    border-radius: 5px;
+    overflow-x: auto;
+    font-family: monospace;
+}
+
+/* Style inline code */
+.bubble code {
+    background-color: #22232A;
+    padding: 2px 4px;
+    border-radius: 3px;
+    font-family: monospace;
+}
+
+/* Links inside AI messages */
+.bubble a {
+    color: #00AFFF;
+    text-decoration: none;
+}
+
+.bubble a:hover {
+    text-decoration: underline;
 }
 
 .input-container {
@@ -115,6 +144,23 @@ const chatBox = document.getElementById("chat-box");
 const userInput = document.getElementById("user-input");
 const sendButton = document.getElementById("send-btn");
 
+// ✅ Change to "llama3-70b-8192" if you want the 70B model
+const model = "llama3-8b-8192";
+
+// Function to convert Markdown to HTML safely
+function renderMarkdown(text) {
+    // Replace Markdown syntax with HTML
+    text = text
+        .replace(/\*\*(.*?)\*\*/g, "<b>$1</b>") // Bold **text**
+        .replace(/\*(.*?)\*/g, "<i>$1</i>") // Italic *text*
+        .replace(/```([\s\S]*?)```/g, '<pre>$1</pre>') // Code block
+        .replace(/`(.*?)`/g, "<code>$1</code>") // Inline code
+        .replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>'); // Links
+
+    return DOMPurify.sanitize(text); // Sanitize output
+}
+
+// Send user input to AI
 async function sendMessage() {
     const userMessage = userInput.value.trim();
     if (!userMessage) return;
@@ -123,7 +169,9 @@ async function sendMessage() {
     displayMessage(userMessage, "user");
     userInput.value = "";
 
-    // Call Groq API
+    // Show "thinking" message
+    const loadingMessage = displayMessage("Thinking...", "ai");
+
     try {
         const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
             method: "POST",
@@ -132,44 +180,55 @@ async function sendMessage() {
                 "Authorization": `Bearer ${apiKey}`
             },
             body: JSON.stringify({
-                model: "llama3-8b-8192", // Change model if needed
+                model: model,
                 messages: [{ role: "user", content: userMessage }]
             })
         });
 
         const data = await response.json();
-        const aiMessage = data.choices?.[0]?.message?.content || "Sorry, I couldn't understand that.";
-        
-        // Display AI response
-        displayMessage(aiMessage, "ai");
+        let aiMessage = data.choices?.[0]?.message?.content || "Sorry, I couldn't understand that.";
+
+        // Remove "thinking" message and display response
+        chatBox.removeChild(loadingMessage);
+        displayMessage(renderMarkdown(aiMessage), "ai", true);
     } catch (error) {
         console.error("Error:", error);
+        chatBox.removeChild(loadingMessage);
         displayMessage("Error communicating with AI.", "ai");
     }
 }
 
-function displayMessage(text, sender) {
+// Function to display messages
+function displayMessage(text, sender, isHTML = false) {
     const messageDiv = document.createElement("div");
     messageDiv.classList.add("message", sender);
 
     const bubbleDiv = document.createElement("div");
     bubbleDiv.classList.add("bubble");
-    bubbleDiv.textContent = text;
+
+    if (isHTML) {
+        bubbleDiv.innerHTML = text; // Render HTML for AI messages
+    } else {
+        bubbleDiv.textContent = text; // Plain text for user messages
+    }
 
     messageDiv.appendChild(bubbleDiv);
     chatBox.appendChild(messageDiv);
 
     // Scroll to bottom
     chatBox.scrollTop = chatBox.scrollHeight;
+
+    return messageDiv;
 }
 
-// Send message on button click
+// 🔥 Send message on button click
 sendButton.addEventListener("click", sendMessage);
 
-// Send message on Enter key press
+// 🔥 Send message on Enter key press
 userInput.addEventListener("keypress", (event) => {
     if (event.key === "Enter") sendMessage();
 });
+
 </script>
 </body>
 </html>
