--- a/meta-llama-3test.html
+++ b/meta-llama-3test.html
@@ -144,12 +144,10 @@ const chatBox = document.getElementById("chat-box");
 const userInput = document.getElementById("user-input");
 const sendButton = document.getElementById("send-btn");
 
-// ✅ Change to "llama3-70b-8192" if you want the 70B model
-const model = "llama3-8b-8192";
+const model = "llama3-8b-8192"; // 🔥 Change to "llama3-70b-8192" for a more powerful model
 
-// Function to convert Markdown to HTML safely
+// Function to safely render Markdown
 function renderMarkdown(text) {
-    // Replace Markdown syntax with HTML
     text = text
         .replace(/\*\*(.*?)\*\*/g, "<b>$1</b>") // Bold **text**
         .replace(/\*(.*?)\*/g, "<i>$1</i>") // Italic *text*
@@ -157,45 +155,7 @@ function renderMarkdown(text) {
         .replace(/`(.*?)`/g, "<code>$1</code>") // Inline code
         .replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>'); // Links
 
-    return DOMPurify.sanitize(text); // Sanitize output
-}
-
-// Send user input to AI
-async function sendMessage() {
-    const userMessage = userInput.value.trim();
-    if (!userMessage) return;
-
-    // Display user message
-    displayMessage(userMessage, "user");
-    userInput.value = "";
-
-    // Show "thinking" message
-    const loadingMessage = displayMessage("Thinking...", "ai");
-
-    try {
-        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-                "Authorization": `Bearer ${apiKey}`
-            },
-            body: JSON.stringify({
-                model: model,
-                messages: [{ role: "user", content: userMessage }]
-            })
-        });
-
-        const data = await response.json();
-        let aiMessage = data.choices?.[0]?.message?.content || "Sorry, I couldn't understand that.";
-
-        // Remove "thinking" message and display response
-        chatBox.removeChild(loadingMessage);
-        displayMessage(renderMarkdown(aiMessage), "ai", true);
-    } catch (error) {
-        console.error("Error:", error);
-        chatBox.removeChild(loadingMessage);
-        displayMessage("Error communicating with AI.", "ai");
-    }
+    return DOMPurify.sanitize(text);
 }
 
 // Function to display messages
@@ -207,27 +167,77 @@ function displayMessage(text, sender, isHTML = false) {
     bubbleDiv.classList.add("bubble");
 
     if (isHTML) {
-        bubbleDiv.innerHTML = text; // Render HTML for AI messages
+        bubbleDiv.innerHTML = text;
     } else {
-        bubbleDiv.textContent = text; // Plain text for user messages
+        bubbleDiv.textContent = text;
     }
 
     messageDiv.appendChild(bubbleDiv);
     chatBox.appendChild(messageDiv);
 
-    // Scroll to bottom
     chatBox.scrollTop = chatBox.scrollHeight;
 
-    return messageDiv;
+    return bubbleDiv;
 }
 
-// 🔥 Send message on button click
+// Send user input to AI
+async function sendMessage() {
+    const userMessage = userInput.value.trim();
+    if (!userMessage) return;
+
+    displayMessage(userMessage, "user");
+    userInput.value = "";
+
+    const loadingMessage = displayMessage("Thinking...", "ai");
+
+    try {
+        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Authorization": `Bearer ${apiKey}`
+            },
+            body: JSON.stringify({
+                model: model,
+                messages: [{ role: "user", content: userMessage }],
+                stream: true // Enable streaming
+            })
+        });
+
+        chatBox.removeChild(loadingMessage);
+        const messageBubble = displayMessage("", "ai", true);
+
+        const reader = response.body.getReader();
+        const decoder = new TextDecoder();
+
+        let partialResponse = "";
+
+        while (true) {
+            const { value, done } = await reader.read();
+            if (done) break;
+
+            const chunk = decoder.decode(value, { stream: true });
+            partialResponse += chunk;
+
+            messageBubble.innerHTML = renderMarkdown(partialResponse);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
+
+    } catch (error) {
+        console.error("Error:", error);
+        chatBox.removeChild(loadingMessage);
+        displayMessage("Error communicating with AI.", "ai");
+    }
+}
+
+// Send message on button click
 sendButton.addEventListener("click", sendMessage);
 
-// 🔥 Send message on Enter key press
+// Send message on Enter key press
 userInput.addEventListener("keypress", (event) => {
     if (event.key === "Enter") sendMessage();
 });
+
 
 </script>
 </body>
